--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
                 <div class="col-lg-4 imgContactDiv"><a href="alzamoracatalina@gmail.com"><img class="contactimg"
                             src="/iconos/logogmail.png" alt="gmail link"></a></div>
                 <div class="col-lg-4 imgContactDiv"><a href="https://github.com/catalina-alzamora"><img
-                            class="contactimg" src="/iconos/logogato.png" alt="github Link"></a></div>
+                            class="contactimg" src="/iconos/logogmail" alt="github Link"></a></div>
                 <div class="col-lg-4 imgContactDiv"><a href="https://www.linkedin.com/in/catalina-alzamora/"><img
                             class="contactimg" src="/iconos/logoin.png" alt="Linkedin link"></a></div>
             </div>
