--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
     <title>Catalina A.</title>
 </head>
 
@@ -38,7 +39,7 @@
         <!---Intro -->
         <div id="intro" class="row sections">
             <div class="col-md-5">
-                <img class=" profileImg" src="./iconos/myPhotoProfile.jpg" alt="profile Picture">
+                <img class=" profileImg" src="./iconos/me.jpg" alt="profile Picture">
                 <div class="middle">
                     <div class="text">¡Bienvenido!</div>
                 </div>
@@ -60,15 +61,15 @@
                     quedé
                     maravillada con el mundo del código y la carrera de front-end developer.
                     Tuve un aprendizaje en base a proyectos y me gusta aprender cosas nuevas constantemente.</p>
-                <button type="submit" onclick="window.open('./iconos/curriculum.pdf')"
-                    class="btn btn-outline-secondary btn-md middleBtn">Curriculum(PDF)</button>
+                <button type="submit" onclick="window.open('./iconos/curriculumfrontend.pdf')"
+                    class="btn btn-outline-secondary btn-md middleBtn cv">Curriculum(PDF)</button>
             </div>
         </div>
         <!---Projects -->
-        <div id="projects" class="container marketing sections">
+        <div id="projects" class="container sections">
             <h2 class="whiteTitle">Proyectos</h2>
             <div class="row projectSection">
-                <div class="col-lg-4">
+                <div class="col-lg-4 logoSpacing">
                     <a href="https://camirojasserantoni.github.io/SCL012-Social-Network/src/index.html#login"><img
                             class="projectImg" src="./iconos/bocetoindex.png" alt="project image"></a>
                     <h3>Boceto</h3>
@@ -76,7 +77,7 @@
                     <a href="https://github.com/catalina-alzamora/SCL012-Social-Network"><button
                             class="btn btn-outline-dark">Github</button></a>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 logoSpacing">
                     <a href="https://catalina-alzamora.github.io/SCL012-data-lovers/src/index.html"><img
                             class="projectImg" src="./iconos/pokeGoindex.png" alt="project image"></a>
                     <h3>Poke Go</h3>
@@ -84,11 +85,11 @@
                     <a href="https://github.com/catalina-alzamora/SCL012-data-lovers"><button
                             class="btn btn-outline-dark">Github</button></a>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 logoSpacing">
                     <a href="https://katsmunoz.github.io/PelisKids/src/index.html"><img class="projectImg"
                             src="./iconos/peliskidsindex.png" alt="project image"></a>
                     <h3>PelisKids</h3>
-                    <p>Base de datos sobre películas infantiles</p>
+                    <p>Base de datos de películas infantiles</p>
                     <a href="https://github.com/catalina-alzamora/PelisKids"><button
                             class="btn btn-outline-dark">Github</button></a>
                 </div>
@@ -114,23 +115,18 @@
             </div>
         </div>
         <!---Contact -->
-
         <div id="contact" class="container sections">
-            <h2 class="whiteTitle">Contáctame</h2>
+            <h2 class=" whiteTitle">Contáctame</h2>
+
             <div class="row">
-                <div class="col-lg-4 imgContactDiv">
-                    <a href="alzamoracatalina@gmail.com"><img class="contactimg" src="/src/iconos/gmail.png"
-                            alt="gmail link"></a>
-                </div>
-                <div class="col-lg-4 imgContactDiv">
-                    <a href="http://github.com/catalina-alzamora"><img class="contactimg" src="/src/iconos/github.png"
-                            alt="github link"></a>
-                </div>
-                <div class="col-lg-4 imgContactDiv">
-                    <a href="http://www.linkedin.com/in/catalina-alzamora/"><img class="contactimg"
-                            src="/src/iconos/linkedin.png" alt="linkedin link"></a>
-                </div>
+                <a href="alzamoracatalina@gmail.com"><img class="contactimg" src="./iconos/logogmail.png"
+                        alt="gmail link"></a>
+                <a href="http://github.com/catalina-alzamora"><img class="contactimg" src="./iconos/logogithub.png"
+                        alt="github link"></a>
+                <a href="http://www.linkedin.com/in/catalina-alzamora/"><img class="contactimg"
+                        src="./iconos/logoin.png" alt="linkedin link"></a>
             </div>
+
         </div>
         <footer class="container">
             <p class="float-right"><a href="#">Volver arriba</a></p>
