--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- favicon links -->
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,14 +37,16 @@
         <div class="container-fluid">
             <div class=""><a href="#"><img class="logo" src="iconos/logotipo.png"></a>
                 <a class="navbar-brand" href="#">
-                    <h5 class="blueTitle"> Catalina Alzamora</h5>
+                    <h5 class="pinkTitle"> Catalina Alzamora</h5>
                 </a></div>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#aboutMe">Sobre mí</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Proyectos</a></li>
@@ -44,70 +65,81 @@
                     <div class="text">¡Bienvenido!</div>
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 introText">
                 <h2 class="myName">Catalina Alzamora</h2>
                 <p>Front-end developer</p>
                 <p>Egresada de Laboratoria</p>
                 <p>Formación en base a proyectos.</p>
-                <a href="#aboutMe"><button type="button" class="btn btn-outline-dark">Ver más</button></a>
+                <a href="#aboutMe"><button type="button" class="btn btn-outline-light">Ver más</button></a>
             </div>
         </div>
 
         <!---About me -->
         <div id="aboutMe" class="white sections">
             <div class="box">
-                <h2 class="blueTitle">Hola</h2 c>
+                <h2 class="pinkTitle">Hola</h2 c>
                 <p class="box">Mi nombre es Catalina Alzamora. Estudié en el bootcam de Laboratoria y desde entonces
-                    quedé
-                    maravillada con el mundo del código y la carrera de front-end developer.
-                    Tuve un aprendizaje en base a proyectos y me gusta aprender cosas nuevas constantemente.</p>
+                    me aventuré en el mundo del código y la carrera de front-end developer.
+                    Tuve un aprendizaje en base a proyectos y me gusta aprender cosas nuevas constantemente.
+                    Soy médico veterinaria, vegetariana, catlover y en mis tiempos libres me gusta ver series y aprender
+                    a tocar ukelele.
+                </p>
                 <button type="submit" onclick="window.open('./iconos/curriculumfrontend.pdf')"
                     class="btn btn-outline-secondary btn-md middleBtn cv">Curriculum(PDF)</button>
             </div>
         </div>
         <!---Projects -->
-        <div id="projects" class="container sections">
-            <h2 class="whiteTitle">Proyectos</h2>
-            <div class="row projectSection">
-                <div class="col-lg-4 logoSpacing">
-                    <a href="https://camirojasserantoni.github.io/SCL012-Social-Network/src/index.html#login"><img
-                            class="projectImg" src="./iconos/bocetoindex.png" alt="project image"></a>
-                    <h3>Boceto</h3>
-                    <p>Red social para artistas digitales</p>
-                    <a href="https://github.com/catalina-alzamora/SCL012-Social-Network"><button
-                            class="btn btn-outline-dark">Github</button></a>
-                </div>
-                <div class="col-lg-4 logoSpacing">
-                    <a href="https://catalina-alzamora.github.io/SCL012-data-lovers/src/index.html"><img
-                            class="projectImg" src="./iconos/pokeGoindex.png" alt="project image"></a>
-                    <h3>Poke Go</h3>
-                    <p>Base de datos sobre Pokemon Go</p>
-                    <a href="https://github.com/catalina-alzamora/SCL012-data-lovers"><button
-                            class="btn btn-outline-dark">Github</button></a>
-                </div>
-                <div class="col-lg-4 logoSpacing">
-                    <a href="https://katsmunoz.github.io/PelisKids/src/index.html"><img class="projectImg"
-                            src="./iconos/peliskidsindex.png" alt="project image"></a>
-                    <h3>PelisKids</h3>
-                    <p>Base de datos de películas infantiles</p>
-                    <a href="https://github.com/catalina-alzamora/PelisKids"><button
-                            class="btn btn-outline-dark">Github</button></a>
+        <div class="projects">
+            <div id="projects" class="container sections">
+                <h2 class="whiteTitle projectTitle">Proyectos</h2>
+                <div class="row projectSection">
+                    <div class="col-lg-4 logoSpacing">
+                        <a href="https://camirojasserantoni.github.io/SCL012-Social-Network/src/index.html#login"
+                            target="_blank"><img class="projectImg" src="./iconos/bocetoindex.png"
+                                alt="project image"></a>
+                        <h3>Boceto</h3>
+                        <p>Red social para artistas digitales</p>
+                        <a href="https://github.com/catalina-alzamora/SCL012-Social-Network" target="_blank"><button
+                                class="btn btn-outline-dark">Github</button></a>
+                    </div>
+                    <div class="col-lg-4 logoSpacing">
+                        <a href="https://catalina-alzamora.github.io/SCL012-data-lovers/src/index.html"
+                            target="_blank"><img class="projectImg" src="./iconos/pokeGoindex.png"
+                                alt="project image"></a>
+                        <h3>Poke Go</h3>
+                        <p>Base de datos sobre Pokemon Go</p>
+                        <a href="https://github.com/catalina-alzamora/SCL012-data-lovers" target="_blank"><button
+                                class="btn btn-outline-dark">Github</button></a>
+                    </div>
+                    <div class="col-lg-4 logoSpacing">
+                        <a href="https://katsmunoz.github.io/PelisKids/src/index.html" target="_blank"><img
+                                class="projectImg" src="./iconos/peliskidsindex.png" alt="project image"></a>
+                        <h3>PelisKids</h3>
+                        <p>Base de datos de películas infantiles</p>
+                        <a href="https://github.com/catalina-alzamora/PelisKids" target="_blank"><button
+                                class="btn btn-outline-dark">Github</button></a>
+                    </div>
                 </div>
             </div>
         </div>
         <!---skills -->
-        <div id="tools" class=" white sections">
-            <h2 class="col-lg-4 blueTitle">Habilidades</h2>
-            <div class="box">
+        <div id="tools" class="white sections">
+            <h2 class=" pinkTitle">Habilidades</h2>
+            <div class="box skillsDiv">
                 <div class="row">
                     <ul class="col-lg-4">
                         <li class="tools">HTML</li>
                         <li class="tools">CSS</li>
                         <li class="tools"> Javascript</li>
-                        <li class="tools">Visual Studio Code</li>
+
                     </ul>
                     <ul class="col-lg-4">
+                        <li class="tools">React</li>
+                        <li class="tools">Visual Studio Code</li>
                         <li class="tools">Github</li>
+
+                    </ul>
+                    <ul class="col-lg-4">
                         <li class="tools">Bootstrap</li>
                         <li class="tools">Figma</li>
                     </ul>
@@ -116,14 +148,14 @@
         </div>
         <!---Contact -->
         <div id="contact" class="container sections">
-            <h2 class=" whiteTitle">Contáctame</h2>
+            <h2 class="contact whiteTitle">Contáctame</h2>
 
-            <div class="row">
-                <a href="alzamoracatalina@gmail.com"><img class="contactimg" src="./iconos/logogmail.png"
-                        alt="gmail link"></a>
-                <a href="http://github.com/catalina-alzamora"><img class="contactimg" src="./iconos/logogithub.png"
-                        alt="github link"></a>
-                <a href="http://www.linkedin.com/in/catalina-alzamora/"><img class="contactimg"
+            <div class="row contactDiv">
+                <a href="alzamoracatalina@gmail.com" target="_blank"><img class="contactimg"
+                        src="./iconos/logogmail.png" alt="gmail link"></a>
+                <a href="http://github.com/catalina-alzamora" target="_blank"><img class="contactimg"
+                        src="./iconos/logogithub.png" alt="github link"></a>
+                <a href="http://www.linkedin.com/in/catalina-alzamora/" target="_blank"><img class="contactimg"
                         src="./iconos/logoin.png" alt="linkedin link"></a>
             </div>
 
