--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
     <main>
         <!---Intro -->
-        <div id="intro" class="row sections">
+        <section class="row sections">
             <div class="col-md-5">
                 <img class=" profileImg" src="./iconos/me.jpg" alt="profile Picture">
                 <div class="middle">
@@ -72,58 +72,51 @@
                 <p>Formación en base a proyectos.</p>
                 <a href="#aboutMe"><button type="button" class="btn btn-outline-light">Ver más</button></a>
             </div>
-        </div>
-
+        </section>
         <!---About me -->
-        <div id="aboutMe" class="white sections">
-            <div class="box">
-                <h2 class="pinkTitle">Hola</h2 c>
-                <p class="box">Mi nombre es Catalina Alzamora. Estudié en el bootcam de Laboratoria y desde entonces
-                    me aventuré en el mundo del código y la carrera de front-end developer.
-                    Tuve un aprendizaje en base a proyectos y me gusta aprender cosas nuevas constantemente.
-                    Soy médico veterinaria, vegetariana, catlover y en mis tiempos libres me gusta ver series y aprender
-                    a tocar ukelele.
-                </p>
-                <button type="submit" onclick="window.open('./iconos/curriculumfrontend.pdf')"
-                    class="btn btn-outline-secondary btn-md middleBtn cv">Curriculum(PDF)</button>
-            </div>
-        </div>
+        <section id="aboutMe" class="white sections box">
+            <h2 class="pinkTitle">Hola</h2>
+            <p class="box">Mi nombre es Catalina Alzamora. Estudié en el bootcam de Laboratoria y desde entonces
+                me aventuré en el mundo del código y la carrera de front-end developer.
+                Tuve un aprendizaje en base a proyectos y me gusta aprender cosas nuevas constantemente.
+                Soy médico veterinaria, vegetariana, catlover y en mis tiempos libres me gusta ver series y aprender
+                a tocar ukelele.
+            </p>
+            <button type="submit" onclick="window.open('./iconos/curriculumfrontend.pdf')"
+                class="btn btn-outline-secondary btn-md middleBtn cv">Curriculum(PDF)</button>
+        </section>
         <!---Projects -->
-        <div class="projects">
-            <div id="projects" class="container sections">
-                <h2 class="whiteTitle projectTitle">Proyectos</h2>
-                <div class="row projectSection">
-                    <div class="col-lg-4 logoSpacing">
-                        <a href="https://camirojasserantoni.github.io/SCL012-Social-Network/src/index.html#login"
-                            target="_blank"><img class="projectImg" src="./iconos/bocetoindex.png"
-                                alt="project image"></a>
-                        <h3>Boceto</h3>
-                        <p>Red social para artistas digitales</p>
-                        <a href="https://github.com/catalina-alzamora/SCL012-Social-Network" target="_blank"><button
-                                class="btn btn-outline-dark">Github</button></a>
-                    </div>
-                    <div class="col-lg-4 logoSpacing">
-                        <a href="https://catalina-alzamora.github.io/SCL012-data-lovers/src/index.html"
-                            target="_blank"><img class="projectImg" src="./iconos/pokeGoindex.png"
-                                alt="project image"></a>
-                        <h3>Poke Go</h3>
-                        <p>Base de datos sobre Pokemon Go</p>
-                        <a href="https://github.com/catalina-alzamora/SCL012-data-lovers" target="_blank"><button
-                                class="btn btn-outline-dark">Github</button></a>
-                    </div>
-                    <div class="col-lg-4 logoSpacing">
-                        <a href="https://katsmunoz.github.io/PelisKids/src/index.html" target="_blank"><img
-                                class="projectImg" src="./iconos/peliskidsindex.png" alt="project image"></a>
-                        <h3>PelisKids</h3>
-                        <p>Base de datos de películas infantiles</p>
-                        <a href="https://github.com/catalina-alzamora/PelisKids" target="_blank"><button
-                                class="btn btn-outline-dark">Github</button></a>
-                    </div>
+        <section id="projects" class="projects container sections">
+            <h2 class="whiteTitle projectTitle">Proyectos</h2>
+            <div class="row projectSection">
+                <div class="col-lg-4 logoSpacing">
+                    <a href="https://camirojasserantoni.github.io/SCL012-Social-Network/src/index.html#login"
+                        target="_blank"><img class="projectImg" src="./iconos/bocetoindex.png" alt="project image"></a>
+                    <h3>Boceto</h3>
+                    <p>Red social para artistas digitales</p>
+                    <a href="https://github.com/catalina-alzamora/SCL012-Social-Network" target="_blank"><button
+                            class="btn btn-outline-dark">Github</button></a>
+                </div>
+                <div class="col-lg-4 logoSpacing">
+                    <a href="https://catalina-alzamora.github.io/SCL012-data-lovers/src/index.html" target="_blank"><img
+                            class="projectImg" src="./iconos/pokeGoindex.png" alt="project image"></a>
+                    <h3>Poke Go</h3>
+                    <p>Base de datos sobre Pokemon Go</p>
+                    <a href="https://github.com/catalina-alzamora/SCL012-data-lovers" target="_blank"><button
+                            class="btn btn-outline-dark">Github</button></a>
+                </div>
+                <div class="col-lg-4 logoSpacing">
+                    <a href="https://katsmunoz.github.io/PelisKids/src/index.html" target="_blank"><img
+                            class="projectImg" src="./iconos/peliskidsindex.png" alt="project image"></a>
+                    <h3>PelisKids</h3>
+                    <p>Base de datos de películas infantiles</p>
+                    <a href="https://github.com/catalina-alzamora/PelisKids" target="_blank"><button
+                            class="btn btn-outline-dark">Github</button></a>
                 </div>
             </div>
-        </div>
+        </section>
         <!---skills -->
-        <div id="tools" class="white sections">
+        <section class="white sections">
             <h2 class=" pinkTitle">Habilidades</h2>
             <div class="box skillsDiv">
                 <div class="row">
@@ -131,13 +124,11 @@
                         <li class="tools">HTML</li>
                         <li class="tools">CSS</li>
                         <li class="tools"> Javascript</li>
-
                     </ul>
                     <ul class="col-lg-4">
                         <li class="tools">React</li>
                         <li class="tools">Visual Studio Code</li>
                         <li class="tools">Github</li>
-
                     </ul>
                     <ul class="col-lg-4">
                         <li class="tools">Bootstrap</li>
@@ -145,11 +136,10 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </section>
         <!---Contact -->
-        <div id="contact" class="container sections">
+        <section id="contact" class="container sections">
             <h2 class="contact whiteTitle">Contáctame</h2>
-
             <div class="row contactDiv">
                 <a href="alzamoracatalina@gmail.com" target="_blank"><img class="contactimg"
                         src="./iconos/logogmail.png" alt="gmail link"></a>
@@ -158,8 +148,7 @@
                 <a href="http://www.linkedin.com/in/catalina-alzamora/" target="_blank"><img class="contactimg"
                         src="./iconos/logoin.png" alt="linkedin link"></a>
             </div>
-
-        </div>
+        </section>
         <footer class="container">
             <p class="float-right"><a href="#">Volver arriba</a></p>
             <p> Creado por © Catalina Alzamora</p>
