fixin logo responsive

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <div class="logoDiv"><a href="#"><img class="logoImg" alt="logo" src="iconos/logotipo.png"></a>
+        <div class="logoDiv">
+            <a href="#"><img class="logoImg" alt="logo" src="iconos/logotipo.png"></a>
             <a class="navbar-brand" href="#">
                 <h5 class="pinkTitle"> Catalina Alzamora</h5>
             </a>
