--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 Soy médico veterinaria, vegetariana, catlover y en mis tiempos libres me gusta ver series y aprender
                 a tocar ukelele.
             </p>
-            <button type="submit" onclick="window.open('./iconos/cv.pdf')"
+            <button type="submit" onclick="window.open('./iconos/CV-Catalina-Alzamora.pdf')"
                 class="btn btn-outline-secondary btn-md middleBtn cv">Curriculum(PDF)</button>
         </section>
         <!---Projects -->
